@@ -1,3 +1,4 @@
+12/8/08 - #1003, use closeButton.png from phetcommon
 10/8/08 - use PhetApplicationConfig.launchSim
 10/8/08 - moved list of rejected features to Unfuddle 802
 6/24/08 - move SphericalNode to piccolo-phet
